Bloqueo del material segun los dias de mora